Correct button alignment

--- a/src/component/dialog/DialogCompanyFilter.css
+++ b/src/component/dialog/DialogCompanyFilter.css
@@ -50,3 +50,7 @@
     -webkit-animation: slide-in 0.5s forwards;
 }
 
+.DialogCompanyFilter-button {
+	display: inline-block;
+	margin-left: 5px;
+}
